--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -7,6 +7,12 @@ spring:
     password: root
     url: jdbc:mysql://192.168.56.100:3306/gulimall_sms
     driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+  application:
+    name: gulimall-coupon
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
