--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,20 @@
 		<module>renren-fast</module>
 		<module>renren-generator</module>
 		<module>gulimall-common</module>
+		<module>gulimall-gateway</module>
 	</modules>
 
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
