--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -39,7 +39,12 @@ spring:
     throw-exception-if-no-handler-found: true
 #  resources:
 #    add-mappings: false
-
+  application:
+    name: renren-fast
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
 
 #mybatis
 mybatis-plus:
