--- a/gulimall-ware/src/main/resources/application.yml
+++ b/gulimall-ware/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
         server-addr: localhost:8848
   application:
     name: gulimall-ware
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
@@ -18,3 +20,6 @@ mybatis-plus:
 
 server:
   port: 11000
+logging:
+  level:
+    com.atguigu.gulimall: debug
