完成分布式基础篇

--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -27,3 +27,9 @@ logging:
   level:
     com.atguigu.gulimall: debug
 
+
+    com:
+      alibaba:
+        nacos:
+          client:
+            naming: error
