--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
   thymeleaf:
     cache: false
+  redis:
+    host: 192.168.56.100
+
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
