--- a/gulimall-search/pom.xml
+++ b/gulimall-search/pom.xml
@@ -39,6 +39,14 @@
 			<artifactId>elasticsearch-rest-high-level-client</artifactId>
 			<version>7.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
