--- a/gulimall-auth-server/src/main/resources/application.yml
+++ b/gulimall-auth-server/src/main/resources/application.yml
@@ -10,6 +10,12 @@ spring:
   redis:
     host: 192.168.56.100
     port: 6379
+  session:
+    store-type: redis
+
 
 server:
   port: 40000
+  servlet:
+    session:
+      timeout: 30m
