--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -17,6 +17,11 @@
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.10</version>
+        </dependency>
         <!--Mybatis-plus-->
         <dependency>
             <groupId>com.baomidou</groupId>
