--- a/renren-generator/src/main/resources/generator.properties
+++ b/renren-generator/src/main/resources/generator.properties
@@ -2,10 +2,10 @@
 
 mainPath=com.hnu
 #\u5305\u540D
-package=com.hnu.lab
-#moduleName=
+package=com.hnu
+moduleName=highlynewapp
 #\u4F5C\u8005
-author=kLjSumi
+author=hnu_worker
 #Email
 email=825963704@qq.com
 #\u8868\u524D\u7F00(\u7C7B\u540D\u4E0D\u4F1A\u5305\u542B\u8868\u524D\u7F00)
