购物车功能

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 		<module>gulimall-third-party</module>
 		<module>gulimall-search</module>
 		<module>gulimall-auth-server</module>
+		<module>gulimall-test-sso-server</module>
+		<module>gulimall-test-sso-client</module>
+		<module>gulimall-cart</module>
 	</modules>
 
 	<build>
