--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -58,9 +58,15 @@ spring:
           uri: lb://gulimall-search
           predicates:
             - Host=search.gulimall.com
+
         - id: gulimall_auth_route
           uri: lb://gulimall-auth-server
           predicates:
             - Host=auth.gulimall.com
+
+        - id: gulimall_cart_route
+          uri: lb://gulimall-cart
+          predicates:
+            - Host=cart.gulimall.com
 server:
   port: 88
