--- a/gulimall-order/src/main/resources/application.yml
+++ b/gulimall-order/src/main/resources/application.yml
@@ -1,4 +1,17 @@
 spring:
+  rabbitmq:
+    host: 192.168.56.100
+    port: 5672
+    virtual-host: /
+    publisher-returns: true
+    publisher-confirm-type: simple
+    #只要抵达队列，以异步发送优先回调我们这个returnconfirm
+    template:
+      mandatory: true
+    #手动确认模式
+    listener:
+      simple:
+        acknowledge-mode: manual
   datasource:
     username: root
     password: root
